# fade-filter

./: pyproject.toml
.github/: README.md
eataway/: __init__.py  __main__.py  filter.py
tests/: test_eataway.py  test_fade_away_filter.py
